requested changes done

--- a/src/components/layout/rickAndMortyPage/rickAndMortyPage.css
+++ b/src/components/layout/rickAndMortyPage/rickAndMortyPage.css
@@ -8,4 +8,10 @@
 .RickAndMortyPage_card {
     width: 100%;
     margin: 2rem;
+    cursor: pointer;
+    transition: .25s;
+}
+
+.RickAndMortyPage_card:hover {
+    transform: scale(1.05);
 }
