grid para cards, modal con detalles y fixes de la clase pasada
* grid para cards, modal con detalles y fixes de la clase pasada

* requested changes done

Co-authored-by: Max Mateo <max.mateo.02@gmail.com>

--- a/src/components/layout/rickAndMortyPage/rickAndMortyPage.css
+++ b/src/components/layout/rickAndMortyPage/rickAndMortyPage.css
@@ -6,6 +6,12 @@
 }
 
 .RickAndMortyPage_card {
-    width: 18rem;
-    margin-bottom: 1rem;
+    width: 100%;
+    margin: 2rem;
+    cursor: pointer;
+    transition: .25s;
+}
+
+.RickAndMortyPage_card:hover {
+    transform: scale(1.05);
 }
